docs: enable sitemap and specify the lib is experimental

--- a/docs/src/content/docs/guides/getting-started.mdx
+++ b/docs/src/content/docs/guides/getting-started.mdx
@@ -5,6 +5,10 @@ description: Learn how to install and set up your project
 
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
+:::caution[Experimental]
+This library is currently experimental and under active development. You may encounter bugs or breaking changes. Please report any issues on [GitHub](https://github.com/roushou/polys/issues).
+:::
+
 Polys is an unofficial TypeScript toolkit for building applications on top of the Polymarket API. It provides three main packages that you can use independently or together:
 
 - **@dicedhq/polymarket** - Typescript client combining both CLOB and Gamma APIs
