--- a/docs/src/content/docs/reference/clob/overview.mdx
+++ b/docs/src/content/docs/reference/clob/overview.mdx
@@ -3,13 +3,13 @@ title: CLOB Overview
 description: Overview of the CLOB (Central Limit Order Book) API client
 ---
 
+import InstallPackage from '../../../../components/InstallPackage.astro';
+
 The CLOB (Central Limit Order Book) API client provides access to Polymarket's order book for trading operations. It supports creating orders, managing positions, querying market data, and more.
 
 ## Installation
 
-```bash
-npm install @dicedhq/clob viem
-```
+<InstallPackage pkg="@dicedhq/clob viem" />
 
 ## Client Initialization
 
