--- a/docs/src/content/docs/reference/data/overview.mdx
+++ b/docs/src/content/docs/reference/data/overview.mdx
@@ -3,13 +3,13 @@ title: Data API Overview
 description: Overview of the Data API client for user positions, trades, and analytics
 ---
 
+import InstallPackage from '../../../../components/InstallPackage.astro';
+
 The Data API client provides read-only access to Polymarket's user data, including positions, trades, activity history, and market analytics. No authentication is required for accessing public data.
 
 ## Installation
 
-```bash
-npm install @dicedhq/data
-```
+<InstallPackage pkg="@dicedhq/data" />
 
 ## Client Initialization
 
