--- a/docs/src/content/docs/reference/gamma/overview.mdx
+++ b/docs/src/content/docs/reference/gamma/overview.mdx
@@ -3,13 +3,13 @@ title: Gamma Overview
 description: Overview of the Gamma API client for market data and events
 ---
 
+import InstallPackage from '../../../../components/InstallPackage.astro';
+
 The Gamma API client provides read-only access to Polymarket's market data, events, sports information, and tags. No authentication is required for accessing public market data.
 
 ## Installation
 
-```bash
-npm install @dicedhq/gamma
-```
+<InstallPackage pkg="@dicedhq/gamma" />
 
 ## Client Initialization
 
